# AI-document-Q-A

./: README.md
Backend/: .env.example  .gitignore  main.py  pyproject.toml
Backend/app/: RAG.py  __init__.py  memory.py  models.py  prompts.py  tools.py  workflow.py
Frontend/: next.config.mjs
Frontend/app/: page.tsx
